--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  fluttertoast: ^8.2.2
+  flutter_map: ^5.0.0
+  latlong2: any
 
 dev_dependencies:
   flutter_test:
