--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.2.2
   flutter_map: ^5.0.0
   latlong2: any
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
